<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ @category     Sashas
  ~ @package      com.magapp
  ~ @author       Sashas IT Support <support@sashas.org>
  ~ @copyright    2007-2018 Sashas IT Support Inc. (http://www.sashas.org)
  ~ @license      http://opensource.org/licenses/GPL-3.0  GNU General Public License, version 3 (GPL-3.0)
  ~ @link         https://play.google.com/store/apps/details?id=com.magapp.main
  ~
  -->

<resources>

    <string name="app_name">Magento Manager</string>
    <string name="label_invoice_info">Invoice Info</string>
    <string name="home">Home</string>
    <string name="sales">Sales</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="customer_name_field">Customer Name:</string>
    <string name="save_button_field">Add Account</string>
    <string name="email_field">Email:</string>
    <string name="customer_group_field">Customer Group:</string>
    <string name="account_slide_title">Account Information</string>
    <string name="totals_slide_title">Order Totals</string>
    <string name="save">Save</string>
    <string name="payment_info_slide_title">Payment Information</string>
    <string name="order_date_field">Order Date:</string>
    <string name="order_status_field">Order Status:</string>
    <string name="store_field">Store:</string>
    <string name="items_slide_title">Items Ordered</string>
    <string name="customer_ip_field">Customer Ip:</string>
    <string name="imageViewDescription">Image</string>
    <string name="Orders">Orders</string>
    <string name="Amounts">Amounts</string>
    <string name="Revenue">Revenue</string>
    <string name="Tax">Tax</string>
    <string name="Shipping">Shipping</string>
    <string name="Qty">Qty</string>
    <string name="PricePlaceholder">$0</string>
    <string name="NumberPlaceholder">0</string>
    <string name="accounts">Accounts</string>
    <string name="add_account">Add Account</string>
    <string name="add_account_title">Please Add information about your store. You can find it at the:</string>
    <string name="add_account_path">System->Configuration->Magento Manager</string>
    <string name="add_account_store_url">Store Url:</string>
    <string name="add_account_username">Username:</string>
    <string name="add_account_api_key">Api Key:</string>
    <string name="add_account_name">Account Name:</string>
    <string name="add_account_url_placeholder">http://</string>

    <string name="menu_delete">Remove</string>
    <string name="menu_edit">Edit</string>

    <string name="login_with_existing">Login to a store</string>
    <string name="add_select_account">Add a store</string>
    <string name="download_extension">Get extension</string>
    <string name="send">Send Feedback</string>
    <string name="magapp_update">Please install/update the extension at your Magento store to the version</string>
    <string name="try_again">Try Again</string>
    <string name="back_button_field">Back</string>
    <string name="no_invoices">There are no invoices for this order yet.</string>
    <string name="invoice">Invoice</string>
    <string name="unhold">Unhold</string>
    <string name="hold">Hold</string>
    <string name="ship">Ship</string>
    <string name="cancel">Cancel</string>
    <string name="creditmemo">Credit Memo</string>
    <string name="date_range">Date Filter</string>
    <string name="actions">Actions</string>
    <string name="submit">Submit</string>
    <string name="add_comment">Submit Comment</string>
    <string name="send_email">Send Email</string>
    <string name="append_comments">Include comments in email</string>
    <string name="notify_customer">Notify Customer</string>
    <string name="comments">Comments</string>
    <string name="commentPlaceholder">Feb 11, 2015 11:36:36 PM | Processing</string>
    <string name="customer_notified">Customer</string>
    <string name="customer_notified_placeholder">Notified</string>
    <string name="capture">Capture</string>
    <string name="remove">Remove</string>
    <string name="link_placeholder">
        <a href="http://www.google.com">http://www.google.com</a>
    </string>
    <string name="add_tracking_number">Add Tracking Number</string>
    <string name="scan_tracking_number">Scan Tracking Number</string>
    <string name="carrier_title">Carrier Title</string>
    <string name="tracking_number">Tracking Number</string>

    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

    <string name="list_no_items">There are no items for this order yet.</string>
    <string name="no_internet">No Internet Connection.</string>

    <string name="credit_memo">Credit Memo</string>

    <string name="tfhours">Last 24 Hours</string>
    <string name="week">Last 7 Days</string>
    <string name="month">Current Month</string>
    <string name="ytd">YTD</string>
    <string name="twoytd">2YTD</string>
    <string name="aboutus">We work very hard to make commenting and public input as simple as possible, if you have any
        suggestions, requests or ideas please let us know!
    </string>
    <string name="about">About</string>
    <string name="channel_name">magapp_channel</string>
    <string name="channel_description">Magento Store Notifications</string>
</resources>
