<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sashasmagentomanager.LoginActivity" >

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/imageViewDescription"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/WelcomeMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Logo"
        android:layout_marginTop="24dp"
        android:gravity="top|center"
        android:text="@string/add_account_title"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/AccountName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AccountNameTitle"
        android:layout_below="@id/AccountNameTitle"
        android:ems="10"
        android:inputType="textNoSuggestions" />

    <TextView
        android:id="@+id/AccountNameTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/WelcomeMessage"
        android:layout_marginTop="30dp"
        android:labelFor="@id/AccountName"
        android:text="@string/add_account_name"
        android:textSize="18sp" >

        <requestFocus />
    </TextView>

    <TextView
        android:id="@+id/WebsiteUrlTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AccountNameTitle"
        android:layout_below="@+id/AccountName"
        android:layout_marginTop="10dp"
        android:labelFor="@id/url"
        android:text="@string/add_account_store_url"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AccountNameTitle"
        android:layout_below="@id/WebsiteUrlTitle"
        android:ems="10"
        android:inputType="textPassword|textUri"
        android:text="@string/add_account_url_placeholder" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AccountNameTitle"
        android:layout_below="@+id/UsernameTitle"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/UsernameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AccountNameTitle"
        android:layout_below="@+id/url"
        android:layout_marginTop="10dp"
        android:labelFor="@id/username"
        android:text="@string/add_account_username"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/url"
        android:layout_below="@+id/ApiKeyTitle"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/ApiKeyTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AccountNameTitle"
        android:layout_below="@+id/username"
        android:layout_marginTop="10dp"
        android:labelFor="@id/password"
        android:text="@string/add_account_api_key"
        android:textSize="18sp" />

    <Button
        android:id="@+id/save_acc"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:gravity="center"
        android:text="@string/save_button_field"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</RelativeLayout>