<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016.  Sashas IT  Support
  ~ http://www.sashas.org
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="match_parent"
              android:layout_gravity="top"
              android:orientation="vertical"
              android:fillViewport="true">

    <com.magapp.main.NowLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
    >

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:background="#ffffff"
                      android:orientation="vertical">

            <LinearLayout
                    style="@style/nowCardStyleTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:minWidth="2dp"
                    android:orientation="vertical"
                    tools:context=".OrderInfoActivity">

                <TextView
                        android:id="@+id/card_title"
                        style="@style/CardTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"

                        android:paddingLeft="3dp"
                        android:text="@string/actions"/>

            </LinearLayout>

            <LinearLayout
                    style="@style/nowCardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:context=".OrderInfoActivity">

                <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/send_email"
                        android:id="@+id/email" android:layout_gravity="center_horizontal"/>
                <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/append_comments"
                        android:id="@+id/comments"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"
                        android:id="@+id/submit" android:layout_gravity="center_horizontal"/>

            </LinearLayout>


        </LinearLayout>
    </com.magapp.main.NowLayout>

</LinearLayout>